--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -292,7 +292,17 @@
   "config_autoAttachOnDuplicated_nextSibling": { "message": "現在のタブと同階層で隣に" },
   "config_autoAttachOnDuplicated_after": { "message": "開く" },
 
-  "config_sameSiteOrphan_caption": { "message": "ロケーションバーまたはFirefoxの外から開かれた、現在のタブと同じWebサイトのタブ" },
+  "config_fromExternal_caption": { "message": "Firefoxの外から開かれたタブ" },
+  "config_autoAttachOnOpenedFromExternal_before": { "message": "\u200b" },
+  "config_autoAttachOnOpenedFromExternal_noControl": { "message": "(制御せず既定の位置に)" },
+  "config_autoAttachOnOpenedFromExternal_independent": { "message": "独立したタブとして" },
+  "config_autoAttachOnOpenedFromExternal_child": { "message": "現在のタブの子として" },
+  "config_autoAttachOnOpenedFromExternal_sibling": { "message": "現在のタブと同階層に" },
+  "config_autoAttachOnOpenedFromExternal_nextSibling": { "message": "現在のタブと同階層で隣に" },
+  "config_autoAttachOnOpenedFromExternal_after": { "message": "開く" },
+  "config_inheritContextualIdentityToTabsFromExternal_label": { "message": "現在のタブのコンテナーを継承する" },
+
+  "config_sameSiteOrphan_caption": { "message": "ロケーションバー、ブックマーク、履歴、およびその他のきっかけから開かれた、現在のタブと同じWebサイトのタブ" },
   "config_autoAttachSameSiteOrphan_before": { "message": "\u200b" },
   "config_autoAttachSameSiteOrphan_noControl": { "message": "(制御せず既定の位置に)" },
   "config_autoAttachSameSiteOrphan_independent": { "message": "独立したタブとして" },
